--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,43 @@
 * {
+  font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
+  margin: 0;
 }
 
 html,
 body {
+  background: #f7f7f7;
   min-height: 100vh;
   width: 100%;
-  background: #f7f7f7;
 }
 
 body {
-  padding: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.wrapper {
-  width: 100%;
-  margin: 2rem auto;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  width: 100%;
-  max-width: 768px;
+  padding: 1rem;
+  display: grid;
 }
 
 textarea {
-  width: 100%;
-  padding: 1rem;
-  font-size: 16px;
   border: 1px solid #ececec;
-  border-radius: 4px;
+  border-radius: 2px;
+  color: #222222;
   margin: 0 auto;
-  min-height: 450px;
-  resize: vertical;
-  font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+  padding: 1rem;
+  resize: none;
+  width: 100%;
 }
 
 textarea:focus {
-  outline: 2px dashed #ececec;
+  outline: 1px solid #ececec;
 }
-
-.status {
-  color: #a6a6a6;
-  font-size: 14px;
-  position: absolute;
-  transition: 200ms ease all;
-  bottom: -28px;
-  left: 0;
-}
-
 
 @media (max-width: 500px) {
   body {
     padding: 0;
-    align-items: flex-start;
   }
 
   textarea {
     height: 100vh
-  }
-
-  textarea:focus {
-    outline: none;
-  }
-
-  .wrapper {
-    margin: 0;
-  }
-
-  .status {
-    display: none;
   }
 }
 
@@ -84,9 +47,9 @@ textarea:focus {
   }
 
   body textarea {
-    color: #ffffff;
-    background: #1d2026;
     border-color: #141418;
+    background: #1d2026;
+    color: #ffffff;
   }
 
   body textarea:focus {
